updates jacocoTestCoverageVerification build pipe to exclude config files

--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,11 @@ jacocoTestReport {
 }
 
 jacocoTestCoverageVerification {
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: '**/configuration/**')
+        }))
+    }
     violationRules {
         rule {
             limit {
