fixed item tests after merge

--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -7,4 +7,4 @@ spring.datasource.url=jdbc:postgresql://invoicify_pg:5432/invoicify_db
 spring.datasource.username=postgres
 spring.datasource.password=rpvGg9DR32CakNu
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
