refactors invoice Tests, adds test for  responcestatusexception, passes all tests

--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -8,3 +8,4 @@ spring.datasource.username=postgres
 spring.datasource.password=rpvGg9DR32CakNu
 
 spring.jpa.hibernate.ddl-auto=create
+server.error.include-stacktrace=never
